# rover_connect2

./: .gitignore  LICENSE  README.md  get-gnss-data.py  get-gnss-neo6mv.py  get-gnss-neo6mv_2.py  get-gnss-u-blox.py  get-telemetry.py  phone_dial.py  phone_responce.py  rest_app.py  rover_connect.py  send-receive-sms.py  ublox-neo6mv.py  ublox-ubx.py
docker_gpio/: Dockerfile  docker-compose.yml
docker_gpio_i2c/: Dockerfile  bme380.py  requirements.txt
wiring-repka-pi/mblink/: CMakeLists.txt  button.c  mblink.c  mbutton.c  mtool.c
